--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -1,2 +1,8 @@
+appTitle= Heelo UI5 App
+appDescription=A simple test app to learn UI5
+
 showHelloButtonText=Say Hello
 helloMsg=Hello {0}
+
+homePageTitle=UI5 Walkthrough
+helloPanelTitle=Hello UI5!
